feat: /dtako/rows に読取日、車輌CC、車輌CDフィルターを追加
新機能:
- read_date: 読取日でフィルター (YYYY-MM-DD)
- vehicle_cc: 車輌CCでフィルター
- vehicle_cd: 車輌CDでフィルター

実装内容:
- handlers: 新しいクエリパラメータを追加
- services: GetRows関数にフィルターパラメータを追加
- repositories: GetByDateRangeWithFilters関数を新規実装
- swagger: APIドキュメントを更新

使用例:
GET /dtako/rows?from=2025-09-13&to=2025-09-14&read_date=2025-09-13&vehicle_cc=001100&vehicle_cd=101
